chore: better list styles, changes blog terminology

--- a/src/components/blog-utils/generic-link.astro
+++ b/src/components/blog-utils/generic-link.astro
@@ -9,7 +9,7 @@ const { link, style = "" } = Astro.props;
 
 <a
     class:list={[
-        "block w-fit border-1 border-black px-1 shadow-md transition-colors duration-300 hover:bg-gray-300 dark:border-white dark:text-white dark:hover:bg-white dark:hover:text-black",
+        "block w-fit border-1 border-black px-2 py-1 shadow-md transition-colors duration-300 hover:bg-gray-300 dark:border-white dark:text-white dark:hover:bg-white dark:hover:text-black",
         { [style]: style.length > 0 }
     ]}
     href={link}
