--- a/src/pages/notes/[...path].astro
+++ b/src/pages/notes/[...path].astro
@@ -27,9 +27,9 @@ const { title, text } = Astro.props;
     <div class="mx-auto w-fit p-10 dark:text-white">
         <h2 class="w-fit">{title}</h2>
         <div class="my-3 w-fit min-w-[50vw] whitespace-pre-line">{text}</div>
-        <GenericLink link="/blogs">
-            <h2 class="font-bold underline">Back to blogs...</h2>
-            <p>click here to go back to more blog posts</p>
+        <GenericLink link="/notes">
+            <h2 class="font-bold underline">Back to notes...</h2>
+            <p>click here to go back to more</p>
         </GenericLink>
     </div>
 </MainLayout>
