--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,76 +12,80 @@ import TextLink from "@components/text-link.astro";
         <div
             class="relative m-6 max-w-2xl overflow-hidden rounded-xl border-1 border-gray-700 p-4 shadow-xl"
         >
-            <h1 class="text-2xl font-bold">
-                <span class="hidden sm:inline">#</span>
-                Charlie
-            </h1>
-            <h2 class="my-3 text-lg font-bold sm:text-xl">
-                <span class="hidden sm:inline">##</span>
-                Student/Full Stack Dev
-            </h2>
-            <p class="my-3">
-                <span class="hidden sm:inline">-</span>
-                Hi! I'm charlie, you may also know me as chazzox!
-            </p>
-            <p class="my-3">
-                <span class="hidden sm:inline">-</span>
-                I'm Currently innovating @ <TextLink
-                    href="https://www.matillion.com/">Matillion</TextLink
-                > as well <TextLink target="_self" href="/blogs?slug=university"
-                    >studying computer science</TextLink
-                > at <TextLink href="https://www.royalholloway.ac.uk/">RHUL</TextLink
-                > next year.
-                <p class="my-3">
-                    <span class="hidden sm:inline">-</span>
+            <ul
+                class="list-none marker:text-2xl marker:font-bold sm:list-inside sm:list-['#_']"
+            >
+                <li><h1 class="inline-block text-2xl font-bold">Charlie</h1></li>
+                <ul class="list-none marker:text-xl sm:list-inside sm:list-['##']">
+                    <li>
+                        <h2 class="mt-3 inline-block text-lg font-bold sm:text-xl">
+                            Student/Full Stack Dev
+                        </h2>
+                    </li>
+                </ul>
+            </ul>
+            <ul class="list-none sm:ml-2 sm:list-outside sm:list-['-']">
+                <li class="my-3 sm:pl-2">
+                    Hi! I'm charlie, you may also know me as chazzox!
+                </li>
+                <li class="my-3 sm:pl-2">
+                    I'm Currently innovating @ <TextLink
+                        href="https://www.matillion.com/">Matillion</TextLink
+                    > as well <TextLink target="_self" href="/notes?slug=university"
+                        >studying computer science</TextLink
+                    > at <TextLink href="https://www.royalholloway.ac.uk/"
+                        >RHUL</TextLink
+                    > next year.
+                </li>
+                <li class="my-3 sm:pl-2">
                     In the past, I've done work for companies such as
                     <TextLink href="https://ukrepmed.com/">UKRepMed</TextLink>
-                </p>
-                <p class="my-3">
-                    <span class="hidden sm:inline">-</span>
-                    Below are some of my projects in varying states of completion that
-                    i've tinkered with over the years<span class="hidden sm:inline"
-                        >:</span
+                </li>
+                <li class="my-3 sm:pl-2">
+                    Below are some of my projects in varying states of completion
+                    that i've tinkered with over the years<span
+                        class="hidden sm:inline">:</span
                     >
-                </p>
-                <div>
-                    <Project
-                        name="Order of St lazarus"
-                        url="/blogs?slug=ostl"
-                        description="A game development project im currently working on, currently learning godot!"
-                    />
-                    <Project
-                        url="https://hydrova.chazzox.uk/"
-                        name="Hydrova"
-                        description="A retired Alternative Reddit client"
-                        openInNewTab
-                    />
-                    <Project
-                        url="https://github.com/chazzox/discordify/"
-                        name="discordify"
-                        description="A Better Discord plugin"
-                        openInNewTab
-                    />
-                    <Project
-                        url="https://github.com/chazzox/faster-panopto/"
-                        name="Faster Panopto"
-                        description="Browser extension for panopto lectures"
-                        openInNewTab
-                    />
-                    <Project
-                        url="https://hack.chazzox.uk/"
-                        name="oxHack"
-                        description="My submission to oxford hack 22"
-                        openInNewTab
-                    />
-                    <Project
-                        url="https://github.com/chazzox/BetterDiscordPlugins/"
-                        name="BetterDiscordPlugins"
-                        description="A Monorepo containing all my BDP stuff"
-                        openInNewTab
-                    />
-                </div>
-            </p>
+                </li>
+            </ul>
+            <div>
+                <Project
+                    name="Order of St lazarus"
+                    url="/notes?slug=ostl"
+                    description="A game development project im currently working on, currently learning godot!"
+                />
+                <Project
+                    url="https://hydrova.chazzox.uk/"
+                    name="Hydrova"
+                    description="A retired Alternative Reddit client"
+                    openInNewTab
+                />
+                <Project
+                    url="https://github.com/chazzox/discordify/"
+                    name="discordify"
+                    description="A Better Discord plugin"
+                    openInNewTab
+                />
+                <Project
+                    url="https://github.com/chazzox/faster-panopto/"
+                    name="Faster Panopto"
+                    description="Browser extension for panopto lectures"
+                    openInNewTab
+                />
+                <Project
+                    url="https://hack.chazzox.uk/"
+                    name="oxHack"
+                    description="My submission to oxford hack 22"
+                    openInNewTab
+                />
+                <Project
+                    url="https://github.com/chazzox/BetterDiscordPlugins/"
+                    name="BetterDiscordPlugins"
+                    description="A Monorepo containing all my BDP stuff"
+                    openInNewTab
+                />
+            </div>
+
             <Footer client:load />
         </div>
     </div>
