--- a/src/pages/notes/index.astro
+++ b/src/pages/notes/index.astro
@@ -13,9 +13,9 @@ import HideNoSlug from "@components/blog-utils/hide-no-slug.svelte";
 
         <div class="flex flex-col gap-4">
             <HideNoSlug client:load>
-                <GenericLink link="/blogs" style="px-3 py-1 block">
+                <GenericLink link="/notes" style="px-3 py-1 block">
                     <h2 class="font-semibold underline">
-                        Click to go back to rest of blogs
+                        Click to go back to rest of notes
                     </h2>
                 </GenericLink>
             </HideNoSlug>
