--- a/src/layouts/index.astro
+++ b/src/layouts/index.astro
@@ -44,6 +44,7 @@ interface Props {
                     localStorage.getItem("theme")
                 );
         </script>
+
         <script>
             import { themeChange } from "theme-change";
             themeChange();
@@ -58,4 +59,8 @@ interface Props {
             >toggle theme</button
         >
     </body>
+    <script type="module" is:inline>
+        import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs";
+        mermaid.initialize({ startOnLoad: true });
+    </script>
 </html>
