--- a/src/pages/notes/[...path].astro
+++ b/src/pages/notes/[...path].astro
@@ -5,7 +5,7 @@ import MainLayout from "@layouts/index.astro";
 
 export async function getStaticPaths() {
     const blogs = await getCollection(
-        "blogs",
+        "notes",
         (e) => !import.meta.env.PROD || e.data.released === true
     );
 
@@ -28,7 +28,9 @@ const { Content } = await render();
 <MainLayout>
     <div class="mx-auto w-fit p-10 dark:text-white">
         <h2 class="w-fit">{title}</h2>
-        <div class="prose my-3 w-fit min-w-[50vw] dark:prose-invert">
+        <div
+            class="prose my-3 w-fit min-w-[50vw] dark:prose-invert [&_svg[id^='mermaid']]:mx-auto"
+        >
             <Content />
         </div>
         <GenericLink link="/notes">
