feat(): progress commit

--- a/src/layouts/index.astro
+++ b/src/layouts/index.astro
@@ -5,7 +5,7 @@ interface Props {
 ---
 
 <!doctype html>
-<html lang="en" class="bg-[#e8e8e8] dark:bg-black">
+<html lang="en" class="bg-content-background dark:bg-black">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -48,7 +48,6 @@ interface Props {
         <script>
             import { themeChange } from "theme-change";
             themeChange();
-            // 👆 you could import the CDN directly instead of these two lines
         </script>
     </head>
     <body>
