--- a/src/pages/notes/index.astro
+++ b/src/pages/notes/index.astro
@@ -7,19 +7,19 @@ import HideNoSlug from "@components/blog-utils/hide-no-slug.svelte";
 ---
 
 <MainLayout>
-    <div class="p-10">
+    <div class="pb-10">
         <Tags client:load />
         <CurrentBlogs client:load />
 
         <div class="flex flex-col gap-4">
             <HideNoSlug client:load>
-                <GenericLink link="/notes" style="px-3 py-1 block">
+                <GenericLink link="/notes" style="px-3 py-1 block ml-10">
                     <h2 class="font-semibold underline">
                         Click to go back to rest of notes
                     </h2>
                 </GenericLink>
             </HideNoSlug>
-            <GenericLink link="/" style="px-3 py-1 block">
+            <GenericLink link="/" style="px-3 py-1 block ml-10">
                 <h2 class="font-semibold underline">Click to go back landing...</h2>
             </GenericLink>
         </div>
