--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import TextLink from "@components/text-link.astro";
 
 <MainLayout>
     <div
-        class="flex min-h-screen flex-col items-center justify-center bg-[#e8e8e8] bg-cover bg-fixed bg-center text-black dark:bg-black dark:text-white"
+        class="flex min-h-screen flex-col items-center justify-center bg-content-background bg-cover bg-fixed bg-center text-black dark:bg-black dark:text-white"
     >
         <div
             class="relative m-6 max-w-2xl overflow-hidden rounded-xl border-1 border-gray-700 p-4 shadow-xl"
