feat(): change in title

--- a/src/pages/notes/other/records.astro
+++ b/src/pages/notes/other/records.astro
@@ -19,7 +19,7 @@ if (images.length !== records.length)
 
 <MainLayout>
     <div class="mx-auto w-fit p-10 dark:text-white">
-        <h2 class="w-fit">All my beautiful records 😊</h2>
+        <h2 class="w-fit">All my records 😊</h2>
         <div
             class="gap-15 prose my-3 grid w-fit min-w-[50vw] grid-cols-2 gap-10 dark:prose-invert md:grid-cols-4"
         >
