--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,13 +29,19 @@ import TextLink from "@components/text-link.astro";
                     Hi! I'm charlie, you may also know me as chazzox!
                 </li>
                 <li class="my-3 sm:pl-2">
-                    I'm Currently innovating @ <TextLink
+                    I'm currently working on growth @ <TextLink
                         href="https://www.matillion.com/">Matillion</TextLink
                     > as well <TextLink target="_self" href="/notes?slug=university"
                         >studying computer science</TextLink
                     > at <TextLink href="https://www.royalholloway.ac.uk/"
                         >RHUL</TextLink
-                    > next year.
+                    >.
+                </li>
+                <li class="my-3 sm:pl-2">
+                    In my spare time i like to collect <TextLink
+                        target="_self"
+                        href="/notes/other/records">records</TextLink
+                    >, go climbing 🧗 and play badminton 🏸
                 </li>
                 <li class="my-3 sm:pl-2">
                     In the past, I've done work for companies such as
