--- a/src/pages/notes/[...path].astro
+++ b/src/pages/notes/[...path].astro
@@ -27,9 +27,9 @@ const { Content } = await render();
 
 <MainLayout>
     <div class="mx-auto w-fit p-10 dark:text-white">
-        <h2 class="w-fit">{title}</h2>
+        <h2 class="my-4 w-fit underline">{title}</h2>
         <div
-            class="prose my-3 w-fit min-w-[50vw] dark:prose-invert [&_svg[id^='mermaid']]:mx-auto"
+            class="prose my-3 w-fit min-w-[50vw] dark:prose-invert [&_*[aria-hidden='true']]:hidden [&_svg[id^='mermaid']]:mx-auto"
         >
             <Content />
         </div>
