feat: tags are workin

--- a/src/layouts/index.astro
+++ b/src/layouts/index.astro
@@ -54,7 +54,7 @@ interface Props {
         <slot />
         <button
             data-toggle-theme="dark,light"
-            class="bottom-0 right-0 hidden px-3 py-1 underline sm:fixed sm:block dark:text-white"
+            class="bottom-0 right-0 hidden px-3 py-1 underline sm:fixed sm:block dark:bg-black dark:text-white"
             >toggle theme</button
         >
     </body>
