--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import TextLink from "@components/text-link.astro";
                 <li class="my-3 sm:pl-2">
                     I'm currently working on growth @ <TextLink
                         href="https://www.matillion.com/">Matillion</TextLink
-                    > as well <TextLink target="_self" href="/notes?slug=university"
+                    > as well <TextLink target="_self" href="/notes/university"
                         >studying computer science</TextLink
                     > at <TextLink href="https://www.royalholloway.ac.uk/"
                         >RHUL</TextLink
