feat: better file org

--- a/src/pages/notes/[...path].astro
+++ b/src/pages/notes/[...path].astro
@@ -58,7 +58,7 @@ const { Content } =
 ---
 
 <MainLayout>
-    <div class="mx-auto w-fit p-10 dark:text-white">
+    <div class="mx-auto w-full p-10 dark:text-white">
         <h2 class="my-4 w-fit underline">
             {entries.length === 1 ? meta[0]!.title : title}
         </h2>
