feat: updated homepage text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,9 +29,7 @@ import TextLink from "@components/text-link.astro";
                     Hi! I'm charlie, you may also know me as chazzox!
                 </li>
                 <li class="my-3 sm:pl-2">
-                    I'm currently working on growth @ <TextLink
-                        href="https://www.matillion.com/">Matillion</TextLink
-                    > as well <TextLink target="_self" href="/notes/university"
+                    I'm currently <TextLink target="_self" href="/notes/university"
                         >studying computer science</TextLink
                     > at <TextLink href="https://www.royalholloway.ac.uk/"
                         >RHUL</TextLink
@@ -44,8 +42,9 @@ import TextLink from "@components/text-link.astro";
                     >, go climbing 🧗 and play badminton 🏸
                 </li>
                 <li class="my-3 sm:pl-2">
-                    In the past, I've done work for companies such as
-                    <TextLink href="https://ukrepmed.com/">UKRepMed</TextLink>
+                    In the past, I've done work for companies such as <TextLink
+                        href="https://www.matillion.com/">Matillion</TextLink
+                    > and <TextLink href="https://ukrepmed.com/">UKRepMed</TextLink>
                 </li>
                 <li class="my-3 sm:pl-2">
                     Below are some of my projects in varying states of completion
